--- a/test.css
+++ b/test.css
@@ -13,17 +13,79 @@ html {
 	padding: 10px;
 }
 
-.main-content {
-	float: left;
-	width:70%;
+.sidebar.test {
+	margin-right: -600px;
 }
 
 .main-nav__menu {
 	text-align: center;
 }
 
-.sidebar {
-	float: right;
+.main-nav__menu-item {
+	display: inline-block;
 	list-style-type: none;
-	width: 30%;
+}
+
+.main-nav__menu-link {
+	color: #000000;
+	display: inline-block;
+	font-size: 1.5rem;
+	padding: 10px;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+.main-nav__menu-link:hover {
+	color: #f3f3f3;
+}
+
+.cards-container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; /* keep item heights the same */
+  
+}
+
+.card {
+  margin-bottom: 15px;
+}
+
+.card__img {
+  width: 100%;
+}
+
+.card__title {
+	color: #707070;
+	font-size: 1.5rem;
+	font-weight: normal;
+	margin: 10px 0 10px 0;
+}
+
+.card__description {
+	color: #adadad;
+	font-size: 0.85rem;
+	line-height: 1.5rem;
+}
+
+@media screen and (min-width: 768px) {
+    .cards-container { 
+    	flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .card {
+    	flex-basis: 30%; 
+    }
+
+    .main-content {
+		float: left;
+		width:70%;
+	}
+
+    .sidebar {
+		float: right;
+		list-style-type: none;
+		width: 30%;
+	}
 }
